clusters/rs.soeren.cloud/monitoring/victoriametrics/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: victoriametrics
spec:
  hosts:
    - victoriametrics.rs.soeren.cloud
  gateways:
    - istio-system/gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: victoriametrics
            port:
              number: 80
